# nene

./: .editorconfig  .gitignore  AndroidManifest.xml  BUILD.bazel  FAQ.md  LICENSE  MODULE.bazel  Privacy.md  README.md  WORKSPACE  WORKSPACE.bzlmod  maven_install.json
res/mipmap-anydpi-v26/: icon.xml
res/values/: colors.xml  strings.xml  styles.xml
res/xml/: pref_about.xml  pref_headers.xml
src/com/yhsif/nene/: AboutPreferenceFragment.kt  BasePreferenceFragment.kt  LauncherActivity.kt  PrefsFragment.kt  SettingsActivity.kt
tools/: release.sh
