###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_kotlin", version = "2.1.3")
bazel_dep(name = "rules_jvm_external", version = "6.7")
bazel_dep(name = "rules_java", version = "8.13.0")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.activity:activity:1.4.0",
        "androidx.appcompat:appcompat:1.3.1",
        "androidx.browser:browser:1.8.0",
        "androidx.core:core-ktx:1.12.0",
        "androidx.fragment:fragment-ktx:1.4.1",
        "androidx.preference:preference:1.2.0",
        "com.google.android.material:material:1.12.0",
    ],
    fail_if_repin_required = True,
    lock_file = "//:maven_install.json",
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(
    maven,
    "maven",
)
